[package]
name = "umark-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"

tree-sitter = "0.24"


tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-html = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
